[FIX] asset list aligned, API properties renamed & icons sanitized

--- a/src/partials/_common.scss
+++ b/src/partials/_common.scss
@@ -4,11 +4,6 @@ body {
     cursor: url("img/cursor.svg"), auto;
 }
 
-#map {
-    height: 100%;
-    width: 85vw;
-}
-
 h1,
 h2 {
     @include main-font;
@@ -29,4 +24,18 @@ img {
     &:focus {
         outline: 2px solid $color-violet;
     }
+}
+
+::-webkit-scrollbar {
+    width: 0.75em;
+}
+
+::-webkit-scrollbar-thumb {
+    @include border-radius;
+    @include box-shadow;
+    background: linear-gradient(to bottom, $color-violet, $color-orchid);
+}
+
+::-webkit-scrollbar-track {
+    background: $color-side;
 }
